--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -339,14 +339,20 @@
                                 <div class="col-md-4">
                                     <div class="mu-single-team">
                                         <img src="assets/images/PROFILE_TERRY.jpg" class="img-circle profile-img" alt="speaker img">
-                                        <div class="mu-single-team-info">
-                                            <h3>Terry Liu</h3>
-                                            <p>CEO</p>
-                                            <ul class="mu-single-team-social">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+
+                                        <div class="mu-single-price mu-popular-price">
+                                            <span class="mu-price-tag">   CEO   </span>
+                                            <div class="mu-single-price-head">
+                                                <h3 class="mu-price-title">Terry Liu</h3>
+                                            </div>
+                                            <h3 class="mu-price-title"></h3>
+                                            <ul>
+                                                <li translate>Founder of Wenyue Capital</li>
+                                                <li translate>Co-founder of Oceanrise trading group</li>
                                             </ul>
+                                            <div id="mu-venue" class=" mu-venue-address">
+                                                <p translate>Professional knowledge of computer science and blockchain investment, as well as entrepreneurs in international trade, investment, consulting, PR and other backgrounds.</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -357,13 +363,23 @@
                                     <div class="mu-single-team">
                                         <img src="assets/images/PROFILE_LUNA.png" class="img-circle profile-img" alt="speaker img">
                                         <div class="mu-single-team-info">
-                                            <h3>Luna Sun</h3>
-                                            <p>CMO</p>
-                                            <ul class="mu-single-team-social">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                            </ul>
+                                            <div class="mu-single-price mu-popular-price">
+                                                <span class="mu-price-tag">   CMO   </span>
+                                                <div class="mu-single-price-head">
+                                                    <h3 class="mu-price-title">Luna Sun</h3>
+                                                </div>
+                                                <h3 class="mu-price-title"></h3>
+
+
+                                                <ul>
+                                                    <li translate>MMU economics</li>
+
+                                                </ul>
+                                                <div id="mu-venue" class=" mu-venue-address">
+                                                    <p translate>Britain CMC foreign exchange trading center working experience. Possesses extensive experience in blockchain technology.</p>
+                                                </div>
+                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -375,13 +391,23 @@
                                     <div class="mu-single-team">
                                         <img src="assets/images/PROFILE_YANGCHEN.jpg" class="img-circle profile-img" alt="speaker img">
                                         <div class="mu-single-team-info">
-                                            <h3>Yangcheng Wei</h3>
-                                            <p>CFO</p>
-                                            <ul class="mu-single-team-social">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                            </ul>
+                                            <div class="mu-single-price mu-popular-price">
+                                                <span class="mu-price-tag">   CFO   </span>
+                                                <div class="mu-single-price-head">
+                                                    <h3 class="mu-price-title">Yangcheng Wei</h3>
+                                                </div>
+                                                <h3 class="mu-price-title"></h3>
+
+                                                <ul>
+                                                    <li translate>Director of River stone capital project</li>
+
+                                                </ul>
+                                                <div id="mu-venue" class=" mu-venue-address">
+                                                    <p translate>BVast experience in the finance industry, years of experience in customer development and investment maintenance and financial management.
+                                                    </p>
+                                                </div>
+                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
@@ -421,10 +447,12 @@
                                         <div class="mu-single-team-info">
                                             <h3>Jiawei Qu</h3>
                                             <p>Chief marketing advisor</p>
-                                            <ul class="mu-single-team-social">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                            <ul class="mu-single-team-social" style="text:left">
+
+                                                <li translate>Director of golden bull finance </li>
+                                                <li translate>Founder of WWW.ICO.COM</li>
+                                                <li translate>Founder of BLOCKCHAIN FINANCIAL SERVICE LTD (BFS)</li>
+                                                <li translate>Founder of Zenith Ventures blockchain</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -438,9 +466,9 @@
                                             <h3>Joe Zhou</h3>
                                             <p>Chief project advisor</p>
                                             <ul class="mu-single-team-social">
-                                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                <li translate>Founder & CEO of 1ST Blood</li>
+                                                <li translate>Advisor of Lampix</li>
+                                                <li translate>Partner of NewBlock Capital</li>
                                             </ul>
                                         </div>
                                     </div>
