--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -351,7 +351,7 @@
                                                 <li translate>Co-founder of Oceanrise trading group</li>
                                             </ul>
                                             <div id="mu-venue" class=" mu-venue-address">
-                                                <p translate>Professional knowledge of computer science and blockchain investment, as well as entrepreneurs in international trade, investment, consulting, PR and other backgrounds.</p>
+                                                <p translate>Professional knowledge of computer science and blockchain investment, entrepreneurs in international trade, investment, consulting, PR and other backgrounds.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -403,7 +403,7 @@
 
                                                 </ul>
                                                 <div id="mu-venue" class=" mu-venue-address">
-                                                    <p translate>BVast experience in the finance industry, years of experience in customer development and investment maintenance and financial management.
+                                                    <p translate>Experience in the finance industry, years of experience in customer development and investment maintenance and financial management.
                                                     </p>
                                                 </div>
                                             </div>
