--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -108,7 +108,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-12">
-                      <h3 translate>Token Generation Event End In</h3>
+                      <h3 translate>Token Generation Event Ends In</h3>
                     </div>
                   </div>
                   <div class="row">
