--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -140,7 +140,7 @@
                     <button translate type=" button" class="btn btn-md btn-primary" data-toggle="modal"
                             data-target="#myModal " (click)='downloadWP()' translate>Whitepaper
                     </button>
-                    <button translate type=" button" (click)="gotoRegister()" class="btn btn-md btn-primary" data-toggle="modal"
+                    <button translate type=" button" (click)="gotoRegister()" class="btn btn-md btn-warning" data-toggle="modal"
                             data-target="#myModal "  translate>Join Token Sale
                     </button>
                     <button translate type=" button" class="btn btn-md btn-primary" data-toggle="modal"
