--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,12 +16,9 @@
             <div class="row">
               <div class="col-md-12">
                 <ul>
-                  <li translate>As an open & multilateral trading platform that supports ERC20 tokens and smart
-                    contracts.
+                  <li translate>As an open & multilateral trading platform that supports ERC20 tokens and smart contracts.
                   </li>
-                  <li translate>It is a decentralized trading platform that does not involve any centralized exchange or
-                    traditional asset management methodology.
-                  </li>
+                  <li translate>It is a decentralized trading platform that does not involve any centralized exchange or traditional asset management methodology.</li>
                   <li translate>It is a decentralized trading platform that does not involve any centralize</li>
                 </ul>
 
@@ -253,8 +250,7 @@
             </div>
             <div class="col-md-9">
               <h6 translate>EtherDelta Lab 51</h6>
-              <p translate>EtherDelta will launch Lab 51 to incubate new innovation in finance, technology and
-                security</p>
+              <p translate>EtherDelta will launch Lab 51 to incubate new innovation in finance, technology and security</p>
             </div>
           </div>
         </div>
