--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -6,7 +6,7 @@
 
                 <div class="col-md-12 col-xs-12" align="center">
                     <div class="line">
-                        <h2><span>EtherDalta Token Event Registration</span></h2>
+                        <h2><span>EtherDelta Token Event Registration</span></h2>
                     </div>
                     <div class="wrapper"><img src="assets/images/logo.jpg" class="img-circle" /></div>
 
