--- a/src/app/app-navbar/app-navbar.component.html
+++ b/src/app/app-navbar/app-navbar.component.html
@@ -140,8 +140,8 @@
                     <button translate type=" button" class="btn btn-md btn-primary" data-toggle="modal"
                             data-target="#myModal " (click)='downloadWP()' translate>Whitepaper
                     </button>
-                    <button id="tokenBtn" translate type=" button" (click)="gotoRegister()" class="btn btn-md btn-warning" data-toggle="modal"
-                            data-target="#myModal "  translate>Join Token Sale
+                    <button id="tokenBtn"  type=" button" class="btn btn-md btn-warning" data-toggle=""
+                            data-target=""  translate>Join Token Sale
                     </button>
                     <button translate type=" button" class="btn btn-md btn-primary" data-toggle="modal"
                             data-target="#myModal" (click)='gotoExchange()' translate>Visit Exchange
