--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -94,6 +94,15 @@
                                             <div class="row wrapper">
                                                 <div class="col-md-12 "><img class="center-block" src="assets/images/ED_TGE_QR.png" /></div>
                                             </div>
+
+                                          <div class="row wrapper">
+                                            <div class="alert alert-danger" role="alert">
+                                              <strong>Note:</strong> Due to traffic and smart contract feature,
+                                              <p>Recommended gas: 100000</p>
+                                              <p>Recommended gas price: 50(best) or 20</p>
+                                            </div>
+                                          </div>
+
                                         </div>
                                     </ngb-alert>
 
