--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -98,7 +98,7 @@
 
                                           <div class="row wrapper">
                                             <div class="alert alert-danger" role="alert">
-                                              <strong>Note:</strong> Due to traffic and smart contract feature,
+                                              <strong>Note:</strong> Due to high volume transaction in Ethereum and Smart contract feature,
                                               <p>Recommended gas: 100000</p>
                                               <p>Recommended gas price: 50(best) or 20</p>
                                             </div>
