--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,7 +2,7 @@
 
     <section id="mu-login">
         <!--<div class=" login-padding-top login-margin ">-->
-      <div class="col-md-8 col-md-offset-2 login-padding-top ">
+        <div class="col-md-8 col-md-offset-2 login-padding-top ">
             <div class="login_box wrapperCenter">
 
                 <div class="col-md-12 col-xs-12" align="center">
@@ -13,125 +13,131 @@
 
                 </div>
                 <form novalidate [formGroup]="registerForm" (ngSubmit)="onFormSubmit() ">
+                    <!-- <pre>{{registerForm.value | json}}</pre>
+                    <pre>{{registerForm.errors | json}}</pre> -->
+
+
                     <div class="row">
-                      <div class="col-md-12">
-                        <div class="control">
-                            <input type="email" class="form-control " formControlName="email" placeholder="Email " required>
-                        </div>
-                        <div class="control" *ngIf="email.errors && (email.dirty || email.touched) ">
-                            <div class="form-group error">
-                                <span [hidden]="!email.errors">Invalid email address</span>
+                        <div class="col-md-12">
+                            <div class="control">
+                                <input type="email" class="form-control " formControlName="email" placeholder="Email " required>
                             </div>
-                        </div>
-                      </div>
-                      <div class=" col-md-12">
-                        <div class="control">
-                            <input type="password" class="form-control" placeholder="Password" formControlName="password" required>
-                        </div>
-                        <div class="control" *ngIf="password.errors && (password.dirty || password.touched) ">
-                            <div class="form-group error ">
-                                <span [hidden]="!password.errors.required">Password is required.</span>
-                                <span [hidden]="!password.errors.pattern">Password must be include at least one letter and one number.</span>
-                                <span [hidden]="!password.errors.minlength">Password must be 6 characters long, we need another {{password.errors.minlength.requiredLength - password.errors.minlength.actualLength}} characters </span>
-                            </div>
-                        </div>
-                      </div>
-                    </div>
-
-                        <!--<div class="line"></div>-->
-                        <!--<div class="control">-->
-                            <!--<div class="form-group">-->
-                                <!--<label class="label" style="text-align: center;">Terms & Agreement</label>-->
-                                <!--<div *ngIf="isLoaded" style="text-align: center;">-->
-                                    <!--<button class="btn btn-primary-outline" (click)="prevPage()" [disabled]="page === 1">Prev</button>-->
-                                    <!--<span>{{ page }} / {{ totalPages }}</span>-->
-                                    <!--<button class="btn btn-primary-outline" (click)="nextPage()" [disabled]="page === totalPages">Next</button>-->
-                                <!--</div>-->
-
-                                <!--<div style="border: 1px solid #e5e5e5; height: 450px; overflow: scroll; padding: 1px;text-align: center;">-->
-                                    <!--<pdf-viewer src="assets/whitepaper/Term_Agreement.pdf" [show-all]="false" [page]="page" [zoom]="0.1" [fit-to-page]="true" [autoresize]="true" (after-load-complete)="afterLoadComplete($event)">-->
-                                    <!--</pdf-viewer>-->
-
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-                        <div class="control">
-                            <div class="form-group">
-                              <div class="checkbox login-padding-left">
-                                <a href="/assets/whitepaper/Term_Agreement.pdf" target="_blank"><h6 style="color:blue"><u>Term and Agreement</u></h6></a>
-                                <label><input type="checkbox" style="color:white;" name="agreement" formControlName="agreement0" value=""><p style="font-weight:10"> I have read, understand, and agree to abide by the terms of the EtherDelta Decentralized exchange agreement.</p></label>
-                              </div>
-                              <div class="checkbox login-padding-left">
-                                <label><input type="checkbox" style="color:white;" name="agreement" formControlName="agreement1" value=""><p style="font-weight:10"> I confirm that I am not sending ETH from an exchange like Coinbase or Kraken. (You must use a real wallet, and if you do not have one, we recommend creating one on http://myetherwallet.com)</p></label>
-                              </div>
-                              <div class="checkbox login-padding-left">
-                                <label><input type="checkbox" style="color:white;" name="agreement" formControlName="agreement2" value=""><p style="font-weight:10"> I confirm that I am not a United States citizen, resident or green card holder, or have a primary residence or domicile in the United States, including Puerto Rico, the U.S. Virgin Islands or any other territories of the United States and are not purchasing Etherdelta tokens or signing on behalf of a United States citizen, resident or entity.</p></label>
-                              </div>
-                                <div class="checkbox login-padding-left">
-                                  <label><input type="checkbox" style="color:white;" name="agreement" formControlName="agreement3" value=""><p style="font-weight:10"> I confirm that I am NOT a citizen of or resident of the People's Republic of China or an entity formed under the laws of the People's Republic of China (each a "Chinese Person") nor are I am purchasing Etherdelta Tokens or signing on behalf of a Chinese Person.</p></label>
+                            <div class="control" *ngIf="email.errors && (email.dirty || email.touched) ">
+                                <div class="form-group error">
+                                    <span [hidden]="!email.errors">Invalid email address</span>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="control " *ngIf="(agreement0.errors ) ||(agreement1.errors ) || (agreement2.errors )||agreement3.errors">
-                            <div class="form-group error">
-                                <p *ngIf="agreement0.errors.required || agreement1.errors.required || agreement2.errors.required||agreement3.errors.required">Please check all</p>
-
+                        <div class=" col-md-12">
+                            <div class="control">
+                                <input type="password" class="form-control" placeholder="Password" formControlName="password" required>
+                            </div>
+                            <div class="control" *ngIf="password.errors && (password.dirty || password.touched) ">
+                                <div class="form-group error ">
+                                    <span [hidden]="!password.errors.required">Password is required.</span>
+                                    <span [hidden]="!password.errors.pattern">Password must be include at least one letter and one number.</span>
+                                    <span [hidden]="!password.errors.minlength">Password must be 6 characters long, we need another {{password.errors.minlength.requiredLength - password.errors.minlength.actualLength}} characters </span>
+                                </div>
                             </div>
                         </div>
-                        <div class="text-center ">
-                            <button type="submit " class="btn btn-success" [disabled]="!registerForm.valid"><span>SUBMIT</span></button>
-                        </div>
+                    </div>
 
-                        <div>
-                            <label></label>
+                    <!--<div class="line"></div>-->
+                    <!--<div class="control">-->
+                    <!--<div class="form-group">-->
+                    <!--<label class="label" style="text-align: center;">Terms & Agreement</label>-->
+                    <!--<div *ngIf="isLoaded" style="text-align: center;">-->
+                    <!--<button class="btn btn-primary-outline" (click)="prevPage()" [disabled]="page === 1">Prev</button>-->
+                    <!--<span>{{ page }} / {{ totalPages }}</span>-->
+                    <!--<button class="btn btn-primary-outline" (click)="nextPage()" [disabled]="page === totalPages">Next</button>-->
+                    <!--</div>-->
+
+                    <!--<div style="border: 1px solid #e5e5e5; height: 450px; overflow: scroll; padding: 1px;text-align: center;">-->
+                    <!--<pdf-viewer src="assets/whitepaper/Term_Agreement.pdf" [show-all]="false" [page]="page" [zoom]="0.1" [fit-to-page]="true" [autoresize]="true" (after-load-complete)="afterLoadComplete($event)">-->
+                    <!--</pdf-viewer>-->
+
+                    <!--</div>-->
+                    <!--</div>-->
+                    <!--</div>-->
+                    <div class="control">
+                        <div class="form-group">
+                            <div class="checkbox login-padding-left">
+                                <a href="/assets/whitepaper/Term_Agreement.pdf" target="_blank">
+                                    <h6 style="color:blue"><u>Term and Agreement</u></h6>
+                                </a>
+                                <label><input type="checkbox" style="color:white;" name="agreement0" formControlName="agreement0" required value=""><p style="font-weight:10"> I have read, understand, and agree to abide by the terms of the <a href="/assets/whitepaper/Term_Agreement.pdf" target="_blank"><u>EtherDelta Decentralized exchange agreement</u></a>.</p></label>
+                            </div>
+                            <div class="checkbox login-padding-left">
+                                <label><input type="checkbox" style="color:white;" name="agreement1" formControlName="agreement1" required value=""><p style="font-weight:10"> I confirm that I am not sending ETH from an exchange like Coinbase or Kraken. (You must use a real wallet, and if you do not have one, we recommend creating one on http://myetherwallet.com)</p></label>
+                            </div>
+                            <div class="checkbox login-padding-left">
+                                <label><input type="checkbox" style="color:white;" name="agreement2" formControlName="agreement2" required value=""><p style="font-weight:10"> I confirm that I am not a United States citizen, resident or green card holder, or have a primary residence or domicile in the United States, including Puerto Rico, the U.S. Virgin Islands or any other territories of the United States and are not purchasing Etherdelta tokens or signing on behalf of a United States citizen, resident or entity.</p></label>
+                            </div>
+                            <div class="checkbox login-padding-left">
+                                <label><input type="checkbox" style="color:white;" name="agreement3" formControlName="agreement3" required value=""><p style="font-weight:10"> I confirm that I am not a citizen of or resident of the People's Republic of China or an entity formed under the laws of the People's Republic of China (each a "Chinese Person") nor are I am purchasing Etherdelta Tokens or signing on behalf of a Chinese Person.</p></label>
+                            </div>
                         </div>
-                        <div class="control">
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <input type="hidden" id="totalRaised" />
-                                    <ngb-alert *ngIf="message" [type]="msgType" role="alert" [dismissible]="false">
-                                        {{ message }}
-                                        <div>
-                                            <label></label>
-                                        </div>
-                                        <div *ngIf="showEDT">
-                                            <div class="input-group">
-                                                <div class="line"></div>
-                                                <input type="text" #inputTarget class="form-control form-control-offset" disabled [value]="contractAddress">
-                                                <span class="input-group-btn">
+                    </div>
+
+                    <div class="control" *ngIf="(agreement0.errors && (agreement0.dirty || agreement0.touched)) ||(agreement1.errors && (agreement1.dirty || agreement1.touched) ) || (agreement2.errors && (agreement2.dirty || agreement2.touched)) || (agreement3.errors && (agreement3.dirty || agreement3.touched))">
+                        <div class="form-group error">
+                            <p *ngIf="agreement0.errors || agreement1.errors || agreement2.errors||agreement3.errors">Please indicated that you accept the listed <u>Terms and Agreements.</u></p>
+
+                        </div>
+                    </div>
+                    <div class="text-center ">
+                        <button type="submit " class="btn btn-success" [disabled]="!registerForm.valid"><span>SUBMIT</span></button>
+                    </div>
+
+                    <div>
+                        <label></label>
+                    </div>
+                    <div class="control">
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <input type="hidden" id="totalRaised" />
+                                <ngb-alert *ngIf="message" [type]="msgType" role="alert" [dismissible]="false">
+                                    {{ message }}
+                                    <div>
+                                        <label></label>
+                                    </div>
+                                    <div *ngIf="showEDT">
+                                        <div class="input-group">
+                                            <div class="line"></div>
+                                            <input type="text" #inputTarget class="form-control form-control-offset" disabled [value]="contractAddress">
+                                            <span class="input-group-btn">
                                       <button class="btn btn-default" [class.btn-success]= "isCopied" type="button" ngxClipboard [cbContent]="contractAddress" (cbOnSuccess)="isCopied = true">copy</button>
                                             </span>
-                                            </div>
-                                            <div class="row wrapper">
-                                                <div class="col-md-12 "><img class="center-block" src="assets/images/ED_TGE_QR.png" /></div>
-                                            </div>
+                                        </div>
+                                        <div class="row wrapper">
+                                            <div class="col-md-12 "><img class="center-block" src="assets/images/ED_TGE_QR.png" /></div>
+                                        </div>
 
-                                            <div class="row wrapper">
-                                                <div class="alert alert-danger" role="alert">
-                                                  <h6><strong>To ensure the transaction, we recommend:</strong></h6>
-                                                  <ul>
+                                        <div class="row wrapper">
+                                            <div class="alert alert-danger" role="alert">
+                                                <h6><strong>To ensure the transaction, we recommend:</strong></h6>
+                                                <ul>
                                                     <li><strong>Minimum Gas Limit:</strong> 100000</li>
                                                     <li><strong>Minium Gas price:</strong> 20</li>
                                                     <li><strong>Minimum Purchase Amount:</strong> 0.10 ETH</li>
-                                                  </ul>
-                                                </div>
+                                                </ul>
                                             </div>
-
                                         </div>
-                                    </ngb-alert>
 
-                                </div>
+                                    </div>
+                                </ngb-alert>
+
                             </div>
-
                         </div>
+
+                    </div>
 
                     <div>
 
                     </div>
+
                 </form>
 
-                <!--<pre>{{registerForm.value | json}}</pre>-->
 
             </div>
         </div>
