--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -114,7 +114,7 @@
                                         </div>
 
                                         <div class="row wrapper">
-                                            <div class="alert alert-danger" role="alert">
+                                            <div class="alert alert-warning" role="alert">
                                                 <h6><strong>To ensure the transaction, we recommend:</strong></h6>
                                                 <ul>
                                                     <li><strong>Minimum Gas Limit:</strong> 100000</li>
