--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -85,6 +85,18 @@
 
                         </div>
                     </div>
+
+                    <div class="control">
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-4"></div>
+                                <div class="col-md-4">
+                                    <re-captcha class="" style="display:inline-block;" formControlName="recaptcha" [siteKey]="siteKey"></re-captcha>
+                                </div>
+                                <div class="col-md-4"></div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="text-center ">
                         <button type="submit " class="btn btn-success" [disabled]="!registerForm.valid"><span>SUBMIT</span></button>
                     </div>
@@ -129,10 +141,6 @@
 
                             </div>
                         </div>
-
-                    </div>
-
-                    <div>
 
                     </div>
 
