--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div class="control">
+                    <!-- <div class="control">
                         <div class="form-group">
                             <div class="row">
                                 <div class="col-md-4"></div>
@@ -96,7 +96,7 @@
                                 <div class="col-md-4"></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="text-center ">
                         <button type="submit " class="btn btn-success" [disabled]="!registerForm.valid"><span>SUBMIT</span></button>
                     </div>
